--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,67 @@
 
 .app-component {
   padding: 40px;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+
+  .routes-section {
+    flex: auto 0 0;
+    width: 400px;
+    margin-right: 40px;
+  }
+
+  .components-section {
+    flex: 1;
+    border: 1px solid #ddd;
+    padding: 20px;
+
+    .links {
+      margin-bottom: 20px;
+
+      a {
+        display: inline-block;
+        color: #00f;
+        margin-right: 20px;
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
+
+.dyn-comp {
+  padding: 10px;
+  border-radius: 5px;
+
+  &.component-a {
+    background-color: #57c5f1;
+  }
+
+  &.component-b {
+    background-color: #987ef5;
+  }
+
+  &.component-c {
+    background-color: #a9f157;
+  }
+
+  .component-name {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+
+  .path {
+    margin-bottom: 10px;
+  }
+
+  .params {
+
+    .key-value {
+      .key, .value {
+        display: inline-block;
+        font-family: 'Courier New', Courier, monospace;
+      }
+    }
+  }
 }
